--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,8 +1,8 @@
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-body {
-  background: purple;
-}
+@import 'colors';
 
-$variable: red;
+body {
+  background: $white;
+}
