--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,6 +5,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 body {
   background: $white;
+  font-family: 'Roboto', sans-serif;
 }
 
 .wb-control-item {
